--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chính sách quyền riêng tư</title>
+    <title>Trang Chủ - Ứng Dụng</title>
 </head>
 <body>
-    <h1>Chính sách quyền riêng tư</h1>
-    <p>Đây là trang chính sách quyền riêng tư của ứng dụng.</p>
+    <h1>Chào mừng bạn đến với ứng dụng của chúng tôi!</h1>
+    <p>Đây là trang chủ. Bạn có thể tìm thấy các tài liệu quan trọng bên dưới:</p>
+
+    <ul>
+        <li><a href="privacy-policy.html">Chính sách Quyền riêng tư</a></li>
+        <li><a href="terms-of-service.html">Điều khoản Dịch vụ</a></li>
+    </ul>
+
+    <footer>
+        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
+    </footer>
 </body>
 </html>
