--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,24 +7,13 @@
 </head>
 <body>
     <h1>Chính sách Quyền riêng tư</h1>
-    <p>Chúng tôi cam kết bảo vệ quyền riêng tư của bạn. Chính sách này giải thích cách chúng tôi thu thập, sử dụng và bảo vệ thông tin cá nhân của bạn khi sử dụng ứng dụng.</p>
-    
-    <h2>1. Thông tin chúng tôi thu thập</h2>
-    <p>- Dữ liệu tài khoản Facebook (nếu được cấp quyền).</p>
-    <p>- Nội dung bạn đăng tải qua ứng dụng.</p>
-    <p>- Dữ liệu khác theo yêu cầu của Facebook API.</p>
+    <p>Chúng tôi cam kết bảo vệ quyền riêng tư của bạn...</p>
 
-    <h2>2. Cách chúng tôi sử dụng thông tin</h2>
-    <p>- Đăng nội dung lên Facebook Pages.</p>
-    <p>- Cải thiện chất lượng dịch vụ.</p>
-    <p>- Không chia sẻ dữ liệu với bên thứ ba.</p>
+    <a href="index.html">Quay lại Trang chủ</a> | 
+    <a href="terms-of-service.html">Xem Điều khoản Dịch vụ</a>
 
-    <h2>3. Cách bạn có thể kiểm soát dữ liệu</h2>
-    <p>Bạn có thể yêu cầu xóa dữ liệu bằng cách gửi email đến <strong>support@yourdomain.com</strong>.</p>
-
-    <h2>4. Thay đổi Chính sách</h2>
-    <p>Chúng tôi có thể cập nhật chính sách này. Mọi thay đổi sẽ được thông báo trên trang web.</p>
-
-    <p><strong>Liên hệ:</strong> support@yourdomain.com</p>
+    <footer>
+        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
+    </footer>
 </body>
 </html>
