--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,20 +7,12 @@
 </head>
 <body>
     <h1>Điều khoản Dịch vụ</h1>
-    <p>Khi sử dụng ứng dụng của chúng tôi, bạn đồng ý với các điều khoản sau.</p>
-    
-    <h2>1. Sử dụng Dịch vụ</h2>
-    <p>Bạn chỉ được sử dụng ứng dụng này để đăng nội dung hợp pháp và không vi phạm chính sách của Facebook.</p>
+    <p>Khi sử dụng ứng dụng của chúng tôi, bạn đồng ý với các điều khoản sau...</p>
 
-    <h2>2. Trách nhiệm của Người dùng</h2>
-    <p>Bạn chịu trách nhiệm về nội dung đăng tải và quyền sở hữu trí tuệ của mình.</p>
+    <a href="index.html">Quay lại Trang chủ</a> | 
+    <a href="privacy-policy.html">Xem Chính sách Quyền riêng tư</a>
 
-    <h2>3. Giới hạn Trách nhiệm</h2>
-    <p>Chúng tôi không chịu trách nhiệm về bất kỳ tổn thất nào phát sinh từ việc sử dụng ứng dụng.</p>
-
-    <h2>4. Chấm dứt Dịch vụ</h2>
-    <p>Chúng tôi có quyền ngừng cung cấp dịch vụ nếu bạn vi phạm các điều khoản này.</p>
-
-    <p><strong>Liên hệ:</strong> support@yourdomain.com</p>
+    <footer>
+        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
+    </footer>
 </body>
-</html>
