--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="privacy-policy.html">Chính sách Quyền riêng tư</a></li>
         <li><a href="terms-of-service.html">Điều khoản Dịch vụ</a></li>
+        <li><a href="delete-data.html">Hướng dẫn Xóa Dữ liệu</a></li>
     </ul>
 
     <footer>
