--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chính sách Quyền riêng tư</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
 </head>
 <body>
-    <h1>Chính sách Quyền riêng tư</h1>
-    <p>Chúng tôi cam kết bảo vệ quyền riêng tư của bạn...</p>
+    <h1>Privacy Policy</h1>
+    <p>We are committed to protecting your privacy...</p>
 
-    <a href="index.html">Quay lại Trang chủ</a> | 
-    <a href="terms-of-service.html">Xem Điều khoản Dịch vụ</a>
+    <a href="index.html">Back to Homepage</a> | 
+    <a href="terms-of-service.html">View Terms of Service</a>
 
-    <footer>
-        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
-    </footer>
+    <footer>
+        <p>&copy; 2025 YourApp. All rights reserved.</p>
+    </footer>
 </body>
 </html>
