--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Điều khoản Dịch vụ</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service</title>
 </head>
 <body>
-    <h1>Điều khoản Dịch vụ</h1>
-    <p>Khi sử dụng ứng dụng của chúng tôi, bạn đồng ý với các điều khoản sau...</p>
+    <h1>Terms of Service</h1>
+    <p>By using our application, you agree to the following terms...</p>
 
-    <a href="index.html">Quay lại Trang chủ</a> | 
-    <a href="privacy-policy.html">Xem Chính sách Quyền riêng tư</a>
+    <a href="index.html">Back to Homepage</a> | 
+    <a href="privacy-policy.html">View Privacy Policy</a>
 
-    <footer>
-        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
-    </footer>
+    <footer>
+        <p>&copy; 2025 YourApp. All rights reserved.</p>
+    </footer>
 </body>
+</html>
