--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ - Ứng Dụng</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage - Application</title>
 </head>
 <body>
-    <h1>Chào mừng bạn đến với ứng dụng của chúng tôi!</h1>
-    <p>Đây là trang chủ. Bạn có thể tìm thấy các tài liệu quan trọng bên dưới:</p>
+    <h1>Welcome to our application!</h1>
+    <p>This is the homepage. You can find important documents below:</p>
 
-    <ul>
-        <li><a href="privacy-policy.html">Chính sách Quyền riêng tư</a></li>
-        <li><a href="terms-of-service.html">Điều khoản Dịch vụ</a></li>
-        <li><a href="delete-data.html">Hướng dẫn Xóa Dữ liệu</a></li>
-    </ul>
+    <ul>
+        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="terms-of-service.html">Terms of Service</a></li>
+        <li><a href="delete-data.html">Data Deletion Instructions</a></li>
+    </ul>
 
-    <footer>
-        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
-    </footer>
+    <footer>
+        <p>&copy; 2025 YourApp. All rights reserved.</p>
+    </footer>
 </body>
 </html>
