--- a/delete-data.html
+++ b/delete-data.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hướng Dẫn Xóa Dữ Liệu</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Deletion Instructions</title>
 </head>
 <body>
-    <h1>Hướng Dẫn Xóa Dữ Liệu Cá Nhân</h1>
-    <p>Nếu bạn muốn xóa dữ liệu cá nhân khỏi hệ thống của chúng tôi, vui lòng làm theo các bước sau:</p>
+    <h1>Personal Data Deletion Instructions</h1>
+    <p>If you wish to delete your personal data from our system, please follow these steps:</p>
 
-    <h2>🔹 Cách Xóa Dữ Liệu</h2>
-    <p>Bạn có thể gửi yêu cầu xóa dữ liệu bằng cách liên hệ với chúng tôi qua email: <strong>support@yourdomain.com</strong>.</p>
+    <h2>🔹 How to Delete Data</h2>
+    <p>You can submit a data deletion request by contacting us via email: <strong>support@yourdomain.com</strong>.</p>
 
-    <p>Khi gửi yêu cầu, vui lòng cung cấp:</p>
-    <ul>
-        <li>Họ và tên</li>
-        <li>Địa chỉ email đã sử dụng để đăng nhập</li>
-        <li>Lý do muốn xóa dữ liệu</li>
-    </ul>
+    <p>When submitting your request, please provide:</p>
+    <ul>
+        <li>Full Name</li>
+        <li>Email address used for sign-up/login</li>
+        <li>Reason for data deletion</li>
+    </ul>
 
-    <p>Sau khi nhận được yêu cầu, chúng tôi sẽ xử lý và phản hồi trong vòng 7 ngày làm việc.</p>
+    <p>Upon receiving the request, we will process and respond within 7 business days.</p>
 
-    <a href="index.html">Quay lại Trang chủ</a>
+    <a href="index.html">Back to Homepage</a>
 
-    <footer>
-        <p>&copy; 2025 YourApp. Mọi quyền được bảo lưu.</p>
-    </footer>
+    <footer>
+        <p>&copy; 2025 YourApp. All rights reserved.</p>
+    </footer>
 </body>
 </html>
